fix: left alignment of containers

--- a/assets/scss/_footer_project.scss
+++ b/assets/scss/_footer_project.scss
@@ -524,12 +524,7 @@
 }
 
 @media (max-width: 400px){
-  .footer-sections{
-    padding-right: 20px !important;
-    margin-left: 25%;
-  }
-
-  .footer-resources{
-    margin-left: 25% !important;
+  .footer-company{
+    margin-left: 5px;
   }
 }
